--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Customize CSS -->
+    <link rel="stylesheet" href='assets/css/loan.css'>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -13,8 +16,43 @@
     <title>Loan Calculator</title>
 </head>
 
-<body>
-    <h1>Hello, world!</h1>
+<body class="bg-dark">
+    <div class="jumbotron jumbotron-fluid" style=" border-radius: 0.3rem; margin-bottom: 0;">
+        <div class="container text-center">
+            <h1 class="display-4">Loan Calculator</h1>
+            <p class="lead">This loan calculator will help you determine the monthly payments on a loan. Simply enter the
+                loan amount, interest rate and number of years to complete the loan in the fields below and click calculate.
+            </p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <div class="card card-body text-center mt-5">
+                    <h1 class="heading display-5 pb-3"></h1>
+                    <form id="loan-form">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-text">$</span>
+                                <input type="text" class="form-control" id="amount" placeholder="Loan Amount">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-text">%</span>
+                                <input type="text" class="form-control" id="interest" placeholder="Annual Interest">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="years" placeholder="Repayment Years">
+                        </div>
+                        <button type="button" class="btn btn-dark btn-lg btn-block">Calculate</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
