--- a/index.html
+++ b/index.html
@@ -49,10 +49,40 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="years" placeholder="Repayment Years">
+                            <input type="number" class="form-control" id="years" placeholder="Repayment Years">
                         </div>
-                        <button type="button" class="btn btn-dark btn-lg btn-block">Calculate</button>
+                        <input type="submit" value="Calculate" class="btn btn-dark btn-block" Calculate>
                     </form>
+                    <!-- LOADER -->
+                    <!-- <div id="loading">
+                        <img src="assets/img/loading.gif" alt="">
+                    </div> -->
+
+                    <!-- RESULTS -->
+                    <div id="results">
+                        <h5>Results</h5>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-text">Monthly Payment</span>
+                                <input type="number" class="form-control" id="monthly-payment" disabled>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-text">Total Payment</span>
+                                <input type="number" class="form-control" id="total-payment" disabled>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-text">Total Interest</span>
+                                <input type="number" class="form-control" id="total-interest" disabled>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
