--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         <input type="submit" value="Calculate" class="btn btn-dark btn-block" Calculate>
                     </form>
                     <!-- LOADER -->
-                    <!-- <div id="loading">
+                    <div id="loading">
                         <img src="assets/img/loading.gif" alt="">
-                    </div> -->
+                    </div>
 
                     <!-- RESULTS -->
                     <div id="results">
